--- a/README
+++ b/README
@@ -1,6 +1,25 @@
-py-scheduler is a cron-like scheduler written in Python. It is not only for
-users but also for developers.
-See CamScheduler (https://github.com/Kantist/CamScheduler) for an example.
+py-scheduler is a cron-like scheduler written in Python with some advanced
+features.
+
+
+Format of schedule table (tab):
+
+sec    min    hour    weekday    day    month    function    args    kwargs
+*      *      *       *          *      *        myfunc      5.6     y=[],z=3
+
+The above example would execute this every second:
+myfunc(3.5, y=[], z=3)
+
+Format for time fields is very similar to crontab. It supports list of patterns
+(<pattern1>,<pattern2>; e.g. *5,*0), ranges (<start>-<end>; e.g. 5-49) and
+increments (<pattern>/<increment> or just /<increment> for whole range; e.g.
+5-49/11,*7/5,/3).
+Weekdays and days can be set for same job (unlike cron).
+
+
+See CamScheduler (https://github.com/Kantist/CamScheduler) for an example of a
+program using py-scheduler.
+
 
 I've tested py-scheduler with Python 2.7.2 and Python 3.2.2; these are the
 latest stable versions of Python. py-scheduler is thus Python 2/3 compatible.
